crates/cribo/tests/snapshots/bundled_code@package_relative_import_reexport.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/package_relative_import_reexport/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n, *, _getattr=getattr):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return _getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n, *, _getattr=getattr, _object=object):
        return _object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else _getattr(_object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None, reload_target=None):
        self._entry = entry
        self._namespace = namespace
        self._reload_target = reload_target

    def create_module(self, spec, *, _getattr=getattr, _globals=globals, _id=id, _setattr=setattr, _type=type, _SimpleNamespace=_cribo.types.SimpleNamespace):
        module = None
        if self._namespace is not None:
            module = self._namespace
        elif self._entry[1] is not None:
            module = _globals()[self._entry[1]]
        if module is not None:
            if _getattr(module, '_cribo_machinery_loaded', False):
                saved = _type(self)._pristine.get(_id(module))
                fresh = _SimpleNamespace()
                fresh.__dict__.update(saved if saved is not None else {'__name__': spec.name})
                return fresh
            return module
        module = _SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            _setattr(module, export, _globals()[binding])
        return module

    def exec_module(self, module, *, _BaseException=BaseException, _dict=dict, _globals=globals, _id=id, _type=type):
        init = self._entry[0]
        pristine = _type(self)._pristine
        key = _id(module)
        if init is None:
            if key not in pristine:
                pristine[key] = _dict(module.__dict__)
            module._cribo_machinery_loaded = True
            return
        is_reload = self._reload_target is module
        if is_reload:
            module.__initialized__ = False
            module.__initializing__ = False
        state = _dict(module.__dict__)
        if key not in pristine:
            pristine[key] = _dict(state)
        try:
            _globals()[init](module)
            module._cribo_machinery_loaded = True
        except _BaseException:
            if is_reload:
                module.__initializing__ = False
            else:
                module.__dict__.clear()
                module.__dict__.update(state)
                module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name), target), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder.register('pkg.module_with_sideeffects', '_cribo_init___cribo_814350_pkg_module_with_sideeffects', 'pkg_module_with_sideeffects', False)
_cribo_finder_local.register('pkg', None, 'pkg', True)
_cribo_finder.register('pkg.definitions', None, None, False, {'CustomError': 'CustomError_2', 'AnotherError': 'AnotherError_2'})
pkg_definitions = _cribo.types.SimpleNamespace(__name__='pkg.definitions', __doc__='Simple class definitions without side effects.')
pkg = _cribo.types.SimpleNamespace(__name__='pkg', __initializing__=False, __initialized__=False, __path__=[])
pkg.definitions = pkg_definitions
"""Simple class definitions without side effects."""
class CustomError_2(Exception):
    """Custom error class."""
    pass
CustomError_2.__module__ = 'pkg.definitions'
CustomError_2.__name__ = 'CustomError'
CustomError_2.__qualname__ = 'CustomError'
class AnotherError_2(Exception):
    """Another error class."""
    pass
AnotherError_2.__module__ = 'pkg.definitions'
AnotherError_2.__name__ = 'AnotherError'
AnotherError_2.__qualname__ = 'AnotherError'
pkg_definitions.AnotherError = AnotherError_2
pkg_definitions.CustomError = CustomError_2
pkg_module_with_sideeffects = _cribo.types.SimpleNamespace(__name__='pkg.module_with_sideeffects', __initializing__=False, __initialized__=False)
_cribo_finder.bind('pkg.module_with_sideeffects', pkg_module_with_sideeffects)
def _cribo_init___cribo_814350_pkg_module_with_sideeffects(_cribo_self, *, _cribo_getattr=getattr, _cribo_base_exception=BaseException):
    if _cribo_getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if _cribo_getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = 'pkg'
    _cribo_self.__doc__ = 'Module with side effects that imports and re-exports from sibling module.'
    """Module with side effects that imports and re-exports from sibling module."""
    sys = _cribo.sys
    _cribo_self.sys = sys
    _cribo_self.sys = sys
    definitions = pkg_definitions
    CustomError = definitions.CustomError
    _cribo_self.CustomError = CustomError
    AnotherError = definitions.AnotherError
    _cribo_self.AnotherError = AnotherError
    print("Module with side effects loaded", file=_cribo.sys.stderr)

    def display(msg):
        """Display a message."""
        print(msg)
    display.__module__ = 'pkg.module_with_sideeffects'
    display.__qualname__ = 'display'
    _cribo_self.display = display
    _cribo_self.__initialized__ = True
    _cribo_self.__initializing__ = False
    return _cribo_self
pkg_module_with_sideeffects.__init__ = _cribo_init___cribo_814350_pkg_module_with_sideeffects
pkg.module_with_sideeffects = pkg_module_with_sideeffects
"""Test case for package with relative imports and re-exports.\n\nThis tests the scenario where:\n1. A package has a module with just class definitions (pkg.definitions)\n2. Another module with side effects imports and re-exports those classes (pkg.module_with_sideeffects)\n3. The main code accesses the re-exported classes\n"""
pkg_module_with_sideeffects = _cribo_init___cribo_814350_pkg_module_with_sideeffects(pkg_module_with_sideeffects)
try:
    raise pkg.module_with_sideeffects.CustomError("test")
except pkg.module_with_sideeffects.CustomError as e:
    print(f"Caught error: {e}")
module_with_sideeffects = pkg.module_with_sideeffects
definitions = pkg.definitions
