crates/cribo/tests/snapshots/bundled_code@parent_child_circular.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/parent_child_circular/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n, *, _getattr=getattr):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return _getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n, *, _getattr=getattr, _object=object):
        return _object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else _getattr(_object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None, reload_target=None):
        self._entry = entry
        self._namespace = namespace
        self._reload_target = reload_target

    def create_module(self, spec, *, _getattr=getattr, _globals=globals, _id=id, _setattr=setattr, _type=type, _SimpleNamespace=_cribo.types.SimpleNamespace):
        module = None
        if self._namespace is not None:
            module = self._namespace
        elif self._entry[1] is not None:
            module = _globals()[self._entry[1]]
        if module is not None:
            if _getattr(module, '_cribo_machinery_loaded', False):
                saved = _type(self)._pristine.get(_id(module))
                fresh = _SimpleNamespace()
                fresh.__dict__.update(saved if saved is not None else {'__name__': spec.name})
                return fresh
            return module
        module = _SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            _setattr(module, export, _globals()[binding])
        return module

    def exec_module(self, module, *, _BaseException=BaseException, _dict=dict, _globals=globals, _id=id, _type=type):
        init = self._entry[0]
        pristine = _type(self)._pristine
        key = _id(module)
        if init is None:
            if key not in pristine:
                pristine[key] = _dict(module.__dict__)
            module._cribo_machinery_loaded = True
            return
        is_reload = self._reload_target is module
        if is_reload:
            module.__initialized__ = False
            module.__initializing__ = False
        state = _dict(module.__dict__)
        if key not in pristine:
            pristine[key] = _dict(state)
        try:
            _globals()[init](module)
            module._cribo_machinery_loaded = True
        except _BaseException:
            if is_reload:
                module.__initializing__ = False
            else:
                module.__dict__.clear()
                module.__dict__.update(state)
                module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name), target), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder_local.register('foo', '_cribo_init___cribo_97cb47_foo', 'foo', True)
_cribo_finder.register('foo.boo', '_cribo_init___cribo_f2ecbb_foo_boo', 'foo_boo', False)
_cribo_finder.register('foo.zoo', '_cribo_init___cribo_83878b_foo_zoo', 'foo_zoo', False)
foo_zoo = _cribo.types.SimpleNamespace(__name__='foo.zoo', __initializing__=False, __initialized__=False)
_cribo_finder.bind('foo.zoo', foo_zoo)
def _cribo_init___cribo_83878b_foo_zoo(_cribo_self, *, _cribo_getattr=getattr, _cribo_base_exception=BaseException):
    if _cribo_getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if _cribo_getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = 'foo'
    _cribo_self.__doc__ = 'Module zoo - the end of the chain.'
    """Module zoo - the end of the chain."""
    print("Initializing foo.zoo module")

    class Zoo:
        """A simple class with no dependencies."""

        @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'foo.zoo'), _cribo_f)[1])
        def format(self, value):
            """Format a value."""
            return f"[{value}]"

        @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'foo.zoo'), _cribo_f)[1])
        def transform(self, data):
            """Transform data."""
            return f"Transformed: {data}"
    Zoo.__module__ = 'foo.zoo'
    Zoo.__qualname__ = 'Zoo'
    _cribo_self.Zoo = Zoo
    _cribo_self.__initialized__ = True
    _cribo_self.__initializing__ = False
    return _cribo_self
foo_zoo.__init__ = _cribo_init___cribo_83878b_foo_zoo
foo = _cribo.types.SimpleNamespace(__name__='foo', __initializing__=False, __initialized__=False, __path__=[])
foo.zoo = foo_zoo
foo_boo = _cribo.types.SimpleNamespace(__name__='foo.boo', __initializing__=False, __initialized__=False)
_cribo_finder.bind('foo.boo', foo_boo)
foo.boo = foo_boo
def _cribo_init___cribo_97cb47_foo(_cribo_self, *, _cribo_getattr=getattr, _cribo_base_exception=BaseException):
    if _cribo_getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if _cribo_getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = 'foo'
    _cribo_self.__doc__ = 'Parent package that imports from its child module.'
    global foo_boo
    """Parent package that imports from its child module."""
    print("Initializing foo package")
    foo_boo = _cribo_init___cribo_f2ecbb_foo_boo(foo_boo)
    helper_function = foo_boo.helper_function
    _cribo_self.helper_function = helper_function
    _cribo_self.helper_function = helper_function

    def package_level_function(x):
        """A function at the package level that uses the imported helper."""
        return helper_function(x) + " (from package)"
    package_level_function.__module__ = 'foo'
    package_level_function.__qualname__ = 'package_level_function'
    _cribo_self.package_level_function = package_level_function
    _cribo_self.__initialized__ = True
    _cribo_self.__initializing__ = False
    return _cribo_self
foo.__init__ = _cribo_init___cribo_97cb47_foo
def _cribo_init___cribo_f2ecbb_foo_boo(_cribo_self, *, _cribo_getattr=getattr, _cribo_base_exception=BaseException):
    if _cribo_getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if _cribo_getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = 'foo'
    _cribo_self.__doc__ = 'Child module boo that imports another sibling.'
    global foo_zoo
    """Child module boo that imports another sibling."""
    print("Initializing foo.boo module")
    foo_zoo = _cribo_init___cribo_83878b_foo_zoo(foo_zoo)
    Zoo = foo.zoo.Zoo
    _cribo_self.Zoo = Zoo
    _cribo_self.Zoo = Zoo

    def helper_function(x):
        """A helper function used by the parent package."""
        zoo = Zoo()
        return zoo.format(x)
    helper_function.__module__ = 'foo.boo'
    helper_function.__qualname__ = 'helper_function'
    _cribo_self.helper_function = helper_function

    def process_data(data):
        """Process data using zoo functionality."""
        zoo = Zoo()
        return zoo.transform(data)
    process_data.__module__ = 'foo.boo'
    process_data.__qualname__ = 'process_data'
    _cribo_self.process_data = process_data
    _cribo_self.__initialized__ = True
    _cribo_self.__initializing__ = False
    return _cribo_self
foo_boo.__init__ = _cribo_init___cribo_f2ecbb_foo_boo
"""Test parent-child circular dependencies.\n\nThis tests the case where:\n1. foo/__init__.py imports from foo.boo\n2. foo.boo imports foo.zoo\n3. This creates a circular dependency because foo.zoo requires foo to be initialized first\n"""
print("Initializing main module")
__cribo_init_result = _cribo_init___cribo_97cb47_foo(foo)
for attr in dir(__cribo_init_result):
    if not attr.startswith('_'):
        setattr(foo, attr, getattr(__cribo_init_result, attr))
foo_boo = _cribo_init___cribo_f2ecbb_foo_boo(foo_boo)
process_data = foo.boo.process_data
result = process_data("test input")
print(f"Result: {result}")
boo = foo.boo
zoo = foo.zoo
